overflow correct

--- a/homepg/assets/css/main.css
+++ b/homepg/assets/css/main.css
@@ -117,7 +117,7 @@ img {
   border: 0;
 }
 svg:not(:root) {
-  overflow: hidden;
+  overflow: auto;
 }
 figure {
   margin: 1em 40px;
@@ -335,7 +335,7 @@ body {
   width: 100%;
   height: 100vh;
   box-shadow: 0 0 45px 5px rgba(0, 0, 0, 0.85);
-  overflow: hidden;
+  overflow: auto;
 }
 .l-wrapper {
   position: relative;
@@ -951,7 +951,7 @@ min-height: 100%;
   height: 150px;
   margin: 0 auto;
   border-radius: 50%;
-  overflow: hidden;
+  overflow: auto;
 }
 .work--lockup .slider--item-image img {
   width: 100%;
@@ -1681,7 +1681,7 @@ min-height: 100%;
   position: relative;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
 }
 .perspective--modalview {
   position: fixed;
@@ -1703,7 +1703,7 @@ min-height: 100%;
   position: absolute;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
